[gd_scene load_steps=34 format=3 uid="uid://xcietj43l3ci"]

[ext_resource type="Script" uid="uid://dccjywd0wui8t" path="res://script/main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://boqt1mnajh71l" path="res://assets/fonts/04B_30__.TTF" id="2_7vrkn"]
[ext_resource type="Script" uid="uid://b5m3ftep8sxxs" path="res://script/parallax_background.gd" id="2_ojb7r"]
[ext_resource type="Script" uid="uid://ckxusqwl6cqhf" path="res://script/audio_control.gd" id="4_jix8l"]
[ext_resource type="Texture2D" uid="uid://mtpky1fhpjdx" path="res://assets/BackGround/Sprite sheet for Basic Pack.png" id="4_qe12f"]
[ext_resource type="Script" uid="uid://bper7tv1l85j6" path="res://script/full_screen_control.gd" id="5_glbon"]
[ext_resource type="Script" uid="uid://b8lb3ik5nurct" path="res://script/sfx.gd" id="5_nlkkf"]
[ext_resource type="Texture2D" uid="uid://dw0ge007ylsyg" path="res://assets/BackGround/Background layers/Layer_0000_9.png" id="8_mg3m2"]
[ext_resource type="Texture2D" uid="uid://dy2wsiqb7y312" path="res://assets/BackGround/Background layers/Layer_0001_8.png" id="9_ojb7r"]
[ext_resource type="Texture2D" uid="uid://w5qvynkgkryd" path="res://assets/BackGround/Background layers/Layer_0002_7.png" id="10_e5qqf"]
[ext_resource type="Texture2D" uid="uid://rw7krm2xcre1" path="res://assets/BackGround/Background layers/Layer_0003_6.png" id="11_7bbuq"]
[ext_resource type="Texture2D" uid="uid://bxdwpl3mwddf8" path="res://assets/BackGround/Background layers/Layer_0004_Lights.png" id="12_saq78"]
[ext_resource type="Texture2D" uid="uid://dc7ftlceyjo0e" path="res://assets/BackGround/Background layers/Layer_0005_5.png" id="13_8uw0o"]
[ext_resource type="Texture2D" uid="uid://w665a5xsobi" path="res://assets/BackGround/Background layers/Layer_0006_4.png" id="14_ql5ya"]
[ext_resource type="Texture2D" uid="uid://3jjsd1svj5ak" path="res://assets/BackGround/Background layers/Layer_0007_Lights.png" id="15_ka3nr"]
[ext_resource type="Texture2D" uid="uid://bjf0jdpe1uier" path="res://assets/BackGround/Background layers/Layer_0008_3.png" id="16_48knj"]
[ext_resource type="Texture2D" uid="uid://1niwk31ub22m" path="res://assets/BackGround/Background layers/Layer_0009_2.png" id="17_m2y5l"]
[ext_resource type="Texture2D" uid="uid://bobldfaeqhnty" path="res://assets/BackGround/Background layers/Layer_0010_1.png" id="18_imjy1"]
[ext_resource type="Texture2D" uid="uid://b8hh6srbsou2n" path="res://assets/BackGround/Background layers/Layer_0011_0.png" id="19_u5051"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qe12f"]
texture = ExtResource("4_qe12f")
region_rect = Rect2(163, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qtwp"]
texture = ExtResource("4_qe12f")
region_rect = Rect2(259, 180, 90, 25)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mg3m2"]
texture = ExtResource("4_qe12f")
region_rect = Rect2(163, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ojb7r"]
texture = ExtResource("4_qe12f")
region_rect = Rect2(259, 180, 90, 25)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5qqf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dy7ct"]
texture = ExtResource("4_qe12f")
region_rect = Rect2(839, 5, 18, 20)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0o4t1"]
texture = ExtResource("4_qe12f")
region_rect = Rect2(871, 7, 18, 18)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fu7sn"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(0.18431373, 0.8666667, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nlkkf"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qe12f"]
color = Color(0.18431373, 0.8666667, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8qtwp"]
color = Color(0.18431373, 0.8666667, 1, 1)
thickness = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qe12f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -3.0
offset_right = 2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_ojb7r")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1145.26, 0)

[node name="1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(580, 242.5)
scale = Vector2(1.2370688, 1)
texture = ExtResource("8_mg3m2")
offset = Vector2(0, 5.905)

[node name="2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -1
position = Vector2(580, 244)
scale = Vector2(1.237069, 1)
texture = ExtResource("9_ojb7r")
offset = Vector2(0, 5.905)

[node name="3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -2
position = Vector2(579, 244)
scale = Vector2(1.2349138, 1)
texture = ExtResource("10_e5qqf")
offset = Vector2(0, 5.905)

[node name="4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -3
position = Vector2(580, 244)
scale = Vector2(1.237069, 1)
texture = ExtResource("11_7bbuq")
offset = Vector2(0, 5.905)

[node name="5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -4
position = Vector2(580, 244)
scale = Vector2(1.237069, 1)
texture = ExtResource("12_saq78")
offset = Vector2(0, 5.905)

[node name="6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -5
position = Vector2(580.5, 244)
scale = Vector2(1.2381465, 1)
texture = ExtResource("13_8uw0o")
offset = Vector2(0, 5.905)

[node name="7" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -6
position = Vector2(580.5, 244)
scale = Vector2(1.2381465, 1)
texture = ExtResource("14_ql5ya")
offset = Vector2(0, 5.905)

[node name="8" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -7
position = Vector2(579.5, 244)
scale = Vector2(1.2359914, 1)
texture = ExtResource("15_ka3nr")
offset = Vector2(0, 5.905)

[node name="9" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -8
position = Vector2(580.5, 244)
scale = Vector2(1.2381465, 1)
texture = ExtResource("16_48knj")
offset = Vector2(0, 5.905)

[node name="10" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -9
position = Vector2(580.5, 244)
scale = Vector2(1.2381465, 1)
texture = ExtResource("17_m2y5l")
offset = Vector2(0, 5.905)

[node name="11" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -10
position = Vector2(580.5, 244)
scale = Vector2(1.2381465, 1)
texture = ExtResource("18_imjy1")
offset = Vector2(0, 5.905)

[node name="12" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -11
position = Vector2(580.5, 244)
scale = Vector2(1.2381465, 1)
texture = ExtResource("19_u5051")
offset = Vector2(0, 5.905)

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -90.0
offset_right = 238.0
offset_bottom = 210.95496
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/hover = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "New Game"

[node name="Button4" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_mg3m2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ojb7r")
theme_override_styles/hover = SubResource("StyleBoxTexture_ojb7r")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e5qqf")
text = "Continue"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/hover = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Option"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/hover = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Exit Game"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 78.0
offset_right = 130.0
offset_bottom = 179.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 50
text = "Cursed Archipelago"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_trim_flags = 128

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -158.0
offset_right = 292.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Options"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qe12f")
region_rect = Rect2(163, 178, 90, 27)
patch_margin_left = 1
patch_margin_top = 2
patch_margin_right = 1
patch_margin_bottom = 2

[node name="Label" type="Label" parent="Options/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_right = 83.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 30
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="Button" parent="Options/NinePatchRect"]
layout_mode = 1
offset_right = 45.0
offset_bottom = 55.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 4
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0o4t1")
theme_override_styles/hover = SubResource("StyleBoxTexture_0o4t1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
alignment = 2

[node name="Music" type="HSlider" parent="Options/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = -71.0
offset_right = 198.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jix8l")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_jix8l")

[node name="SFX" type="HSlider" parent="Options/NinePatchRect"]
layout_mode = 0
offset_left = 178.0
offset_top = 178.0
offset_right = 493.0
offset_bottom = 253.0
theme_override_styles/slider = SubResource("StyleBoxLine_nlkkf")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_qe12f")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8qtwp")
max_value = 1.0
step = 0.0
value = 1.0
script = ExtResource("5_nlkkf")

[node name="FullScreenControl" type="CheckButton" parent="Options/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 261.0
offset_right = 486.0
offset_bottom = 352.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0.5019608)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxEmpty_qe12f")
button_pressed = true
text = "FullScreen"
script = ExtResource("5_glbon")

[node name="Label2" type="Label" parent="Options/NinePatchRect"]
layout_mode = 0
offset_left = 51.0
offset_top = 115.0
offset_right = 176.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 24
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Options/NinePatchRect"]
layout_mode = 0
offset_left = 50.0
offset_top = 183.0
offset_right = 163.0
offset_bottom = 241.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 24
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button4" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/NinePatchRect/Button4" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/NinePatchRect/Music" to="Options/NinePatchRect/Music" method="_on_value_changed"]
[connection signal="value_changed" from="Options/NinePatchRect/SFX" to="Options/NinePatchRect/SFX" method="_on_value_changed"]
[connection signal="toggled" from="Options/NinePatchRect/FullScreenControl" to="Options/NinePatchRect/FullScreenControl" method="_on_toggled"]
